# UpTrader_menu

./: .gitignore  pyproject.toml
addressable_menu/: db.sqlite3  manage.py
addressable_menu/addressable_menu/: asgi.py  settings.py  urls.py  wsgi.py
addressable_menu/menu/: admin.py  models.py  urls.py  views.py
addressable_menu/menu/migrations/: 0001_initial.py
addressable_menu/menu/templates/: home.html  products.html
addressable_menu/menu/templates/menu/: menu.html
addressable_menu/menu/templatetags/: menu_tags.py
